--- a/manast_site/templates/shop/tables/sales_table.html
+++ b/manast_site/templates/shop/tables/sales_table.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %} {% trans "Sales" %} {% endblock title %}
+{% block title %} {{ shop.name }} | {% trans "Sales" %} {% endblock title %}
 
 {% block stylesheets %}
     {{ block.super }}
@@ -70,6 +70,44 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2>Benefits per Item</h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li>
+                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                            <li>
+                                <a class="close-link"><i class="fa fa-close"></i></a>
+                            </li>
+                        </ul>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <div id="container_item" style="height:350px;"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2>Benefits per Category</h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li>
+                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                            <li>
+                                <a class="close-link"><i class="fa fa-close"></i></a>
+                            </li>
+                        </ul>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <div id="container_category" style="height:350px;"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock content %}
@@ -92,4 +130,153 @@
     <script src="{% static "/vendors/jszip/dist/jszip.min.js" %}"></script>
     <script src="{% static "/vendors/pdfmake/build/pdfmake.min.js" %}"></script>
     <script src="{% static "/vendors/pdfmake/build/vfs_fonts.js" %}"></script>
+    <!-- Chart.js -->
+    <script src="{% static "/vendors/Chart.js/dist/Chart.min.js" %}"></script>
+    <!-- ECharts -->
+    <script src="{% static "/vendors/echarts/dist/echarts.min.js" %}"></script>
+    <script src="{% static "/vendors/echarts/map/js/world.js" %}"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-gl/dist/echarts-gl.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-stat/dist/ecStat.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/dataTool.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/china.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/world.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/bmap.min.js"></script>
+
+    <script type="text/javascript">
+        var dom = document.getElementById("container_item");
+        var myChart = echarts.init(dom);
+        var app = {};
+        option = null;
+        var data = genData();
+        var list = {{ benefitsItems|safe }};
+        option = {
+            tooltip: {
+                trigger: 'item',
+                formatter: '{a} <br/>{b} : {c}€ ({d}%)'
+            },
+            legend: {
+                type: 'scroll',
+                orient: 'vertical',
+                right: 10,
+                top: 20,
+                bottom: 20,
+                data: data.legendData,
+
+                selected: data.selected
+            },
+            series: [
+                {
+                    name: 'Item',
+                    type: 'pie',
+                    radius: '55%',
+                    center: ['40%', '50%'],
+                    data: data.seriesData,
+                    emphasis: {
+                        itemStyle: {
+                            shadowBlur: 10,
+                            shadowOffsetX: 0,
+                            shadowColor: 'rgba(0, 0, 0, 0.5)'
+                        }
+                    }
+                }
+            ]
+        };
+
+        function genData() {
+            var nameList = {{ benefitsItems_keys|safe }};
+            var legendData = [];
+            var papa = {{ benefitsItems|safe }} ;
+            var seriesData = [];
+            var selected = {};
+            for (var i = 0; i < nameList.length; i++) {
+                name = nameList[i];
+                legendData.push(name);
+                seriesData.push({
+                    name: name,
+                    value: papa[name]
+                });
+                selected[name] = i < 6;
+            }
+
+            return {
+                legendData: legendData,
+                seriesData: seriesData,
+                selected: selected
+            };
+        }
+
+        if (option && typeof option === "object") {
+            myChart.setOption(option, true);
+        }
+    </script>
+    <script type="text/javascript">
+        var dom = document.getElementById("container_category");
+        var myChart = echarts.init(dom);
+        var app = {};
+        option = null;
+        var data = genData();
+        var list = {{ benefitsCategory|safe }};
+        option = {
+            tooltip: {
+                trigger: 'item',
+                formatter: '{a} <br/>{b} : {c}€ ({d}%)'
+            },
+            legend: {
+                type: 'scroll',
+                orient: 'vertical',
+                right: 10,
+                top: 20,
+                bottom: 20,
+                data: data.legendData,
+
+                selected: data.selected
+            },
+            series: [
+                {
+                    name: 'Category',
+                    type: 'pie',
+                    radius: '55%',
+                    center: ['40%', '50%'],
+                    data: data.seriesData,
+                    emphasis: {
+                        itemStyle: {
+                            shadowBlur: 10,
+                            shadowOffsetX: 0,
+                            shadowColor: 'rgba(0, 0, 0, 0.5)'
+                        }
+                    }
+                }
+            ]
+        };
+
+        function genData() {
+            var nameList = {{ benefitsCategory_keys|safe }};
+            var legendData = [];
+            var papa = {{ benefitsCategory|safe }} ;
+            var seriesData = [];
+            var selected = {};
+            for (var i = 0; i < nameList.length; i++) {
+                name = nameList[i];
+                legendData.push(name);
+                seriesData.push({
+                    name: name,
+                    value: papa[name]
+                });
+                selected[name] = i < 6;
+            }
+
+            return {
+                legendData: legendData,
+                seriesData: seriesData,
+                selected: selected
+            };
+        }
+
+        if (option && typeof option === "object") {
+            myChart.setOption(option, true);
+        }
+    </script>
+
 {% endblock javascripts %}
