--- a/manast_site/templates/top_navigation.html
+++ b/manast_site/templates/top_navigation.html
@@ -6,7 +6,23 @@
             <a id="menu_toggle"><i class="fa fa-bars"></i></a>
         </div>
 
+
         <ul class="nav navbar-nav navbar-right">
+            {% get_current_language as LANGUAGE_CODE %}
+{#            {{ LANGUAGE_CODE }}#}
+            <form action="{% url 'set_language' %}" method="post"> {% csrf_token %}
+                <input type="hidden" name="next" value="{{ redirect_to }}">
+                <select name="language" id="">
+                    {% get_available_languages as LANGUAGES %}
+                    {% get_language_info_list for LANGUAGES as languages %}
+                    {% for language in languages %}
+                        <option value="{{ language.code }}"  {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                            {{ language.name_local }} ({{ language.code }})
+                        </option>
+                    {% endfor %}
+                </select>
+                <input type="submit" value="Go">
+            </form>
             <li class="">
                 <a href="javascript:" class="user-profile dropdown-toggle" data-toggle="dropdown"
                    aria-expanded="false">
@@ -19,10 +35,10 @@
                     <li><a href="{% url "profile_view" %}">{% trans "Profile" %}</a></li>
                     <li>
                         <a href="{% url "edit_user" %}">
-                            <span>{% trans "Settings" %}</span>
+                            <span>{% trans "Edit Profile" %}</span>
                         </a>
                     </li>
-                    <li><a href="https://github.com/oierajenjo/ManagementAssistant">{% trans "Help" %}</a></li>
+                    <li><a href="https://github.com/oierajenjo/ManagementAssistant" target="_blank">{% trans "Help" %}</a></li>
                     <li><a href="{% url "logout" %}"><i class="fa fa-sign-out pull-right"></i>{% trans "Log Out" %}</a></li>
                 </ul>
             </li>
