Commit 33 Predictions trials and stats chart

--- a/manast_site/templates/shop/tables/predictions_table.html
+++ b/manast_site/templates/shop/tables/predictions_table.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
+Predictions
+{{ predictions }}
+<br>
+History
+{{ history }}
+<br>
+Error
+{{ error }}
 
 </body>
 </html>
