--- a/manast_site/templates/shop/tables/predictions_table.html
+++ b/manast_site/templates/shop/tables/predictions_table.html
@@ -1,18 +1,127 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-Predictions
-{{ predictions }}
-<br>
-History
-{{ history }}
-<br>
-Error
-{{ error }}
+{% extends "base_site.html" %}
+{% load i18n %}
+{% load static %}
 
-</body>
-</html>
+{% block title %} {{ shop.name }} | {% trans "Stats" %} {% endblock title %}
+
+{% block stylesheets %}
+    {{ block.super }}
+{% endblock stylesheets %}
+
+{% block content %}
+    <div class="right_col" role="main">
+        <div class="clearfix"></div>
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2>{% trans "Prediction of benefits per day by Mean Square" %}</h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li>
+                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                            {% comment %}                            <li>
+                                <a class="close-link"><i class="fa fa-close"></i></a>
+                            </li>{% endcomment %}
+                        </ul>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <div id="container_mean" style="height:350px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2>{% trans "Time Series Forecast Model" %}</h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li>
+                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                            <li>
+                                <a class="close-link"><i class="fa fa-close"></i></a>
+                            </li>
+                        </ul>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <div class="text-center">
+                            <h1>{% trans "Next day prediction" %}: {{ prediction|floatformat:2 }}€</h1>
+                        </div>
+                        <div class="text-center">
+                            <img src="{% static direction %}" alt="prediction">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
+
+{% block javascripts %}
+    {{ block.super }}
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-gl/dist/echarts-gl.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-stat/dist/ecStat.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/dataTool.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/china.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/world.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/bmap.min.js"></script>
+    <script type="text/javascript">
+        var dom = document.getElementById("container_mean");
+        var myChart = echarts.init(dom);
+        var app = {};
+        option = null;
+        option = {
+            {% comment %}            title: {
+                            text: '折线图堆叠'
+                        },{% endcomment %}
+            tooltip: {
+                trigger: 'axis'
+            },
+            legend: {
+                data: [ '{% trans "Sales" %}', '{% trans "Predictions" %}']
+            },
+            grid: {
+                left: '3%',
+                right: '4%',
+                bottom: '3%',
+                containLabel: true
+            },
+            toolbox: {
+                feature: {
+                    saveAsImage: {}
+                }
+            },
+            xAxis: {
+                type: 'category',
+                boundaryGap: false,
+                data: {{ pred_mean_dates|safe }}
+            },
+            yAxis: {
+                type: 'value'
+            },
+            series: [
+                {
+                    name: '{% trans "Sales" %}',
+                    type: 'line',
+                    stack: false,
+                    data: {{ values_mean }}
+                },
+                {
+                    name: '{% trans "Predictions" %}',
+                    type: 'line',
+                    stack: false,
+                    data: {{ pred_mean }}
+                },
+            ]
+        };
+        if (option && typeof option === "object") {
+            myChart.setOption(option, true);
+        }
+    </script>
+
+{% endblock javascripts %}
