--- a/manast_site/templates/account/edit_user.html
+++ b/manast_site/templates/account/edit_user.html
@@ -52,12 +52,12 @@
                                     <span class="required">*</span>
                                 </label>
                                 <div class="col-md-5 col-sm-6 col-xs-12">
-                                    <input id="id_user-password1" type="password" name="user-password1" maxlength="100" required="required" class="form-control col-md-7 col-xs-12" placeholder="{% trans 'Repeat password' %}"/>
+                                    <input id="id_user-password1" type="password" name="user-password1" maxlength="100" required="required" class="form-control col-md-7 col-xs-12" placeholder="{% trans 'Repeat Password' %}"/>
                                 </div>
                             </div>
                             <br>
                             <div class="item form-group">
-                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="id_user-password2">{% trans 'Password' %}
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="id_user-password2">{% trans 'Repeat Password' %}
                                     <span class="required">*</span>
                                 </label>
                                 <div class="col-md-5 col-sm-6 col-xs-12">
