--- a/manast_site/templates/account/profile_view.html
+++ b/manast_site/templates/account/profile_view.html
@@ -22,7 +22,7 @@
                                     <a href="{% url "edit_user" %}">
                                         <img class="img-circle profile_img"
                                              src="/images/{{ profile.avatar }}"
-                                             alt="Avatar" title="{% trans "Edit profile" %}">
+                                             alt="Avatar" title="{% trans "Edit Profile" %}">
                                     </a>
                                 </div>
                             </div>
