--- a/manast_site/templates/registration/password_reset_done.html
+++ b/manast_site/templates/registration/password_reset_done.html
@@ -22,7 +22,7 @@
 
     </h1>
     <h1>
-        {% trans "In case youd haven't received it yet, check if you introduced it correctly and also the spam folder." %}
+        {% trans "In case you haven't received it yet, check if you introduced it correctly and also the spam folder." %}
     </h1>
 </div>
 
