--- a/manast_site/templates/registration/password_reset_email.html
+++ b/manast_site/templates/registration/password_reset_email.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% autoescape off %}
-    {% trans "In order to restablish the password for your account" %}, {{ user.get_username }},
+    {% trans "In order to reestablish the password for your account" %}, {{ user.get_username }},
     {% trans "go to the following link" %}:
 
     {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
