--- a/manast_site/templates/shop/tables/stats_table.html
+++ b/manast_site/templates/shop/tables/stats_table.html
@@ -15,27 +15,6 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>{% trans "Benefits per week" %}</h2>
-                        <ul class="nav navbar-right panel_toolbox">
-                            <li>
-                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                            </li>
-                            {% comment %}                            <li>
-                                <a class="close-link"><i class="fa fa-close"></i></a>
-                            </li>{% endcomment %}
-                        </ul>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="x_content">
-                        <div id="container_week" style="height:350px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="x_panel">
-                    <div class="x_title">
                         <h2>{% trans "Benefits per day" %}</h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li>
@@ -49,6 +28,27 @@
                     </div>
                     <div class="x_content">
                         <div id="container_day" style="height:350px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2>{% trans "Benefits per week" %}</h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li>
+                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                            {% comment %}                            <li>
+                                <a class="close-link"><i class="fa fa-close"></i></a>
+                            </li>{% endcomment %}
+                        </ul>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <div id="container_week" style="height:350px;"></div>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                     {
                         name: '{{bd}}',
                         type: 'line',
-                        stack: 'stack',
+                        stack: false,
                         data: {{ benefits_per_week|get_elements:bd }}
                     },{% endfor %}
             ]
@@ -156,7 +156,7 @@
                     {
                         name: '{{bd}}',
                         type: 'line',
-                        stack: 'stack',
+                        stack: false,
                         data: {{ benefits_per_day|get_elements:bd }}
                     },{% endfor %}
             ]
