--- a/manast_site/templates/shop/upload.html
+++ b/manast_site/templates/shop/upload.html
@@ -20,15 +20,20 @@
             {{ order }}
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-                <h1>Upload a CSV file</h1>
-                <input type="file" name="file">
-                <p>Only accepts CSV files</p>
-                <button type="submit" class="btn btn-success">Upload</button>
+                <h1>{% trans "Upload a CSV file" %}</h1>
+                <div class="input-group">
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" id="file">
+                        {#                        <label class="custom-file-label" for="file">{% trans "Choose file" %}</label>#}
+                    </div>
+                    <p>{% trans "Only accepts CSV files" %}</p>
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary btn-success" type="submit">{% trans "Upload" %}</button>
+                    </div>
+                </div>
             </form>
         {% endif %}
     </div>
-
-
 {% endblock content %}
 
 {% block javascripts %}
