--- a/manast_site/templates/base_site.html
+++ b/manast_site/templates/base_site.html
@@ -39,7 +39,9 @@
 {% block body %}
     <div class="container body">
         <div class="main_container">
-
+            {% get_current_language as LANGUAGE_CODE %}
+            {% get_available_languages as LANGUAGES %}
+            {% get_language_info_list for LANGUAGES as languages %}
             {% block sidebar %}
                 <div class="col-md-3 left_col {% block sidebar_class %} {% endblock sidebar_class %}">
                     {% include "sidebar.html" %}
