--- a/manast_site/templates/shop/shop_view.html
+++ b/manast_site/templates/shop/shop_view.html
@@ -50,14 +50,14 @@
                             {% comment %}                            <a class="btn btn-primary nav-link" href="{% url 'holiday' pk=shop.pk %}">
                                 {% trans "Add Holidays" %}
                             </a>{% endcomment %}
-                            <a class="btn btn-danger" data-toggle="modal" data-target=".bd-example-modal-sm" id="btn-confirm">Delete Shop <i class="fa fa-trash"></i></a>
+                            <a class="btn btn-danger" data-toggle="modal" data-target=".bd-example-modal-sm" id="btn-confirm">{% trans "Delete Shop" %}<i class="fa fa-trash"></i></a>
                             <!-- Modal -->
                             <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="mi-modal">
                                 <div class="modal-dialog modal-sm">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                            <h4 class="modal-title" id="myModalLabel">Delete {{ shop.name }}</h4>
+                                            <h4 class="modal-title" id="myModalLabel">>{% trans "Delete" %} {{ shop.name }}</h4>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-default" id="modal-btn-si">{% trans "Yes" %}</button>
@@ -100,19 +100,19 @@
                 //Acciones si el usuario confirma
                 $.ajax({
                     // points to the url where your data will be posted
-                    url:'delete_shop',
+                    url: '{{ shop.pk }}/delete_shop',
 
                     // data that you will like to return
-                    data:{pk: {{shop.pk}}},
+                    data: {pk: {{shop.pk}}},
                     // what to do when the call is success
                     success:function(response){
-                        location.href = '/profile/'
+                        location.href = '/profile'
                     },
                     // what to do when the call is complete (you can right your clean from code here)
                     complete:function(){},
                     // what to do when there is an error
                     error:function (xhr, textStatus, thrownError){
-                        location.href = '/profile/'
+                        location.href = '/profile'
                     }
                 });
             }
