Commit 42 Finished (Upload Expenses)

--- a/manast_site/templates/shop/expenses_upload.html
+++ b/manast_site/templates/shop/expenses_upload.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %} {{ shop.name }} {% endblock title %}
+{% block title %} {{ shop.name }} {% trans "Upload Expenses" %} {% endblock title %}
 
 {% block stylesheets %}
     {{ block.super }}
