--- a/manast_site/templates/shop/tables/sales_table.html
+++ b/manast_site/templates/shop/tables/sales_table.html
@@ -73,7 +73,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>Benefits per Item</h2>
+                        <h2>{% trans  "Benefits per Item"%}</h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li>
                                 <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
@@ -92,7 +92,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>Benefits per Category</h2>
+                        <h2>{% trans  "Benefits per Category"%}</h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li>
                                 <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
