--- a/manast_site/templates/account/edit_user.html
+++ b/manast_site/templates/account/edit_user.html
@@ -32,7 +32,7 @@
                             </div>
                             <br>
                             <div class="item form-group">
-                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="id_user-username">Username
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="id_user-username">{% trans 'Username' %}
                                 </label>
                                 <div class="col-md-5 col-sm-6 col-xs-12">
                                     <input id="id_user-username" type="text" name="user-username" maxlength="100" required="required" data-validate-length-range="2,15" class="form-control col-md-7 col-xs-12" value="{{ profile.user.username }}"/>
@@ -77,8 +77,7 @@
 
                             <div class="form-group" align="left">
                                 <div >
-                                    <button type="submit" class="btn btn-success btn-lg"><i class="fa fa-save"></i>
-                                        &nbsp; {% trans 'Save' %}</button>
+                                    <button type="submit" class="btn btn-success btn-lg"><i class="fa fa-save"></i>{% trans 'Save' %}</button>
                                 </div>
                             </div>
                         </form>
