--- a/manast_site/templates/base_site.html
+++ b/manast_site/templates/base_site.html
@@ -97,9 +97,32 @@
         <script src="{% static "/vendors/devbridge-autocomplete/dist/jquery.autocomplete.min.js" %}"></script>
         <!-- starrr -->
         <script src="{% static "/vendors/starrr/dist/starrr.js" %}"></script>
+        <script>
+            var elem = document.documentElement;
+            function openFullscreen() {
+                if (document.fullScreenElement || (!document.mozFullScreen && !document.webkitIsFullScreen)) {
+                    if (document.documentElement.requestFullScreen) {
+                        document.documentElement.requestFullScreen();
+                    } else if (document.documentElement.mozRequestFullScreen) {
+                        document.documentElement.mozRequestFullScreen();
+                    } else if (document.documentElement.webkitRequestFullScreen) {
+                        document.documentElement.webkitRequestFullScreen(Element.ALLOW_KEYBOARD_INPUT);
+                    }
+                } else {
+                    if (document.cancelFullScreen) {
+                        document.cancelFullScreen();
+                    } else if (document.mozCancelFullScreen) {
+                        document.mozCancelFullScreen();
+                    } else if (document.webkitCancelFullScreen) {
+                        document.webkitCancelFullScreen();
+                    }
+                }
+            }
+        </script>
     {% endblock %}
     <!-- Custom Theme Scripts -->
     <script src="{% static "/build/js/custom.js" %}"></script>
+
 {% endblock body %}
 </body>
 </html>
