--- a/manast_site/templates/registration/login_register.html
+++ b/manast_site/templates/registration/login_register.html
@@ -25,7 +25,7 @@
             <form action="login" method="post">
                 {% csrf_token %}
                 <div class="field-wrap">
-                    <label for="id_username">{% trans "user" %}
+                    <label for="id_username">{% trans "Username" %}
                         <span class="req">*</span>
                     </label>
                     <input id="id_username" name="username" type="text" required autocomplete="off"/>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="field-wrap">
-                    <label for="id_username"> {% trans "User" %}
+                    <label for="id_username"> {% trans "Username" %}
                         <span class="req">*</span>
                     </label>
                     <input id="id_username" name="username" type="text" required autocomplete="off"/>
