--- a/manast_site/templates/sidebar.html
+++ b/manast_site/templates/sidebar.html
@@ -54,7 +54,7 @@
             <form action="{% url 'set_language' %}" method="post"> {% csrf_token %}
                 <div class="input-group mb-3">
                     <input type="hidden" name="next" value="{{ redirect_to }}" class="form-control">
-                    <label for="language_select"><h3>{% trans "Select language" %}</h3></label>
+                    <label for="language_select"><h3>{% trans "Select Language" %}</h3></label>
                     <select class="form-control custom-select" name="language" id="language_select">
                         {% get_current_language as LANGUAGE_CODE %}
                         {% get_available_languages as LANGUAGES %}
@@ -76,16 +76,13 @@
 
     <!-- /menu footer buttons -->
     <div class="sidebar-footer hidden-small">
-        <a data-toggle="tooltip" data-placement="top" title="Settings">
+        <a data-toggle="tooltip" data-placement="top" title="{% trans "Edit Profile" %}" href="{% url "edit_user" %}">
             <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
         </a>
-        <a data-toggle="tooltip" data-placement="top" title="FullScreen">
+        <a data-toggle="tooltip" data-placement="top" title="{% trans "FullScreen" %}" onclick="openFullscreen()">
             <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
         </a>
-        <a data-toggle="tooltip" data-placement="top" title="Lock">
-            <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
-        </a>
-        <a data-toggle="tooltip" data-placement="top" title="Logout" href={% url "logout" %}>
+        <a data-toggle="tooltip" data-placement="top" title="{% trans "Logout" %}" href={% url "logout" %}>
             <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
         </a>
     </div>
