--- a/manast_site/templates/shop/tables/predictions_table.html
+++ b/manast_site/templates/shop/tables/predictions_table.html
@@ -33,10 +33,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12">
+            <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>{% trans "Time Series Forecast Model" %}</h2>
+                        <h2>{% trans "AR Forecast Model" %}</h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li>
                                 <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
@@ -49,10 +49,34 @@
                     </div>
                     <div class="x_content">
                         <div class="text-center">
-                            <h1>{% trans "Next day prediction" %}: {{ prediction|floatformat:2 }}€</h1>
+                            <h3>{% trans "Next day prediction" %}: {{ prediction_ar|floatformat:2 }}€</h3>
                         </div>
                         <div class="text-center">
-                            <img src="{% static direction %}" alt="prediction">
+                            <img src="{% static direction_ar %}" alt="prediction" class="img-responsive center-block">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-6">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2>{% trans "Other Forecast Results" %}</h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li>
+                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                            <li>
+                                <a class="close-link"><i class="fa fa-close"></i></a>
+                            </li>
+                        </ul>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <div class="text-center">
+                            <h3>{% trans "MA prediction" %}: {{ prediction_ma|floatformat:2 }}€</h3>
+                        </div>
+                        <div class="text-center">
+                            <h3>{% trans "ARMA prediction" %}: {{ prediction_arma|floatformat:2 }}€</h3>
                         </div>
                     </div>
                 </div>
