--- a/manast_site/templates/shop/expenses_upload.html
+++ b/manast_site/templates/shop/expenses_upload.html
@@ -23,7 +23,7 @@
                 <h1>{% trans "Upload a CSV file" %}</h1>
                 <div class="input-group">
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="file">
+                        <input type="file" class="custom-file-input" id="fileE" name="fileE">
                         {#                        <label class="custom-file-label" for="file">{% trans "Choose file" %}</label>#}
                     </div>
                     <p>{% trans "Only accepts CSV files" %}</p>
