Commit 48 Finished (Top icon)

--- a/manast_site/templates/registration/login_register.html
+++ b/manast_site/templates/registration/login_register.html
@@ -5,10 +5,11 @@
 <head>
     {% load static %}
     <meta charset="UTF-8">
-    <title>{% trans "Login" %}</title>
+    <title>{% trans "ManagementAssistant" %} | {% trans "Login" %}</title>
     <link href="{% static 'css/letras.css' %}" rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'css/normalize.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" href="{% static "images/shopping-bag.png" %}">
 </head>
 
 <body>
