--- a/manast_site/templates/base_site.html
+++ b/manast_site/templates/base_site.html
@@ -10,6 +10,7 @@
             <meta charset="utf-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="icon" href="{% static "images/shopping-bag.png" %}">
         {% endblock meta %}
 
         <title>{% trans "ManagementAssistant" %} | {% block title %}{% endblock %}</title>
