Commit 56 Final Version 1.0.2
Predictions ARMA and MA changed

--- a/manast_site/templates/shop/tables/expenses_table.html
+++ b/manast_site/templates/shop/tables/expenses_table.html
@@ -57,7 +57,7 @@
                                 <tbody>
                                 {% for exp in expenses %}
                                     <tr>
-                                        <td>{{ exp.date }}</td>
+                                        <td>{{ exp.date|date:"Y-m-d" }}</td>
                                         <td>{{ exp.item }}</td>
                                         <td>{{ exp.item.category }}</td>
                                         <td>{{ exp.quantity|floatformat:2 }}</td>
