Commit 60 Final Version 1.0.4
Mean error error

--- a/manast_site/templates/shop/tables/predictions_table.html
+++ b/manast_site/templates/shop/tables/predictions_table.html
@@ -49,8 +49,8 @@
                     </div>
                     <div class="x_content">
                         <div class="text-center">
-                            <h4>{% trans "Mean error per day" %}: {{ epd_week|floatformat:2 }}€</h4>
-                            <h4>{% trans "Total error" %}: {{ error_prev_week|floatformat:2 }}€</h4>
+                            <h3>{% trans "Mean error per day" %}: {{ epd_week|floatformat:2 }}€</h3>
+{#                            <h4>{% trans "Total error" %}: {{ error_prev_week|floatformat:2 }}€</h4>#}
                         </div>
                         <div id="container_prev" style="height:350px;"></div>
                     </div>
